Adding DB Connections

--- a/NutriLift/appsettings.json
+++ b/NutriLift/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MainConnection": "Server=tcp:nutrilift.database.windows.net,1433;Initial Catalog=NutriLift-DB;Persist Security Info=False;User ID=alan@nutrilift.co.uk@nutrilift;Password=Yammin1994!!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
