Initial check-in to understand data accessing using Dapper and Entity Framework Core

--- a/NutriLift/appsettings.Development.json
+++ b/NutriLift/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "MainConnection": "Server=tcp:nutrilift.database.windows.net,1433;Initial Catalog=NutriLift-DB;Persist Security Info=True;User ID=alan@nutrilift.co.uk@nutrilift;Password=Yammin1994!!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "NutriLiftContext": "Server=tcp:nutrilift.database.windows.net,1433;Initial Catalog=NutriLift-DB;Persist Security Info=False;User ID=alan@nutrilift.co.uk@nutrilift;Password=Yammin1994!!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
